[gd_scene load_steps=38 format=3 uid="uid://dbnmylhndo1fv"]

[ext_resource type="Script" uid="uid://btfyvsvew7gy3" path="res://scripts/spear.gd" id="1_qj3hu"]
[ext_resource type="PackedScene" uid="uid://bk1byhl8kstn7" path="res://scenes/killzone.tscn" id="2_qw3lm"]
[ext_resource type="Script" uid="uid://c14vhjk3i8q6y" path="res://scripts/Enemyhurtbox.gd" id="3_sa1hk"]
[ext_resource type="Shader" uid="uid://baggp1nthtugs" path="res://scripts/Flash.gdshader" id="4_qlj30"]
[ext_resource type="Texture2D" uid="uid://bua4j4b8r4uqh" path="res://assets/sprites/Gladiator.png" id="4_ustrn"]
[ext_resource type="Texture2D" uid="uid://bjtc1jgg6l8oy" path="res://assets/sprites/Noise_disolve.tres" id="5_nx1u4"]
[ext_resource type="AudioStream" uid="uid://dgsabuskap3ek" path="res://assets/sounds/officer death sound.mp3" id="7_3cgvs"]
[ext_resource type="AudioStream" uid="uid://gja8mgwkqg1h" path="res://assets/sounds/Spear_attack.wav" id="8_dldk2"]
[ext_resource type="AudioStream" uid="uid://oqk1c1iysqis" path="res://assets/sounds/hurt.wav" id="9_mep7c"]
[ext_resource type="AudioStream" uid="uid://cyfgrn3i4wyuh" path="res://assets/sounds/spear prepare attack sound.mp3" id="9_r8cal"]
[ext_resource type="AudioStream" uid="uid://bi436kdhu0l3n" path="res://assets/sounds/spear walking sound.mp3" id="11_3cgvs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05wi8"]
size = Vector2(30.5, 40.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qj3hu"]
size = Vector2(32, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4g3kk"]
size = Vector2(16.5, 20.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ob1wc"]
size = Vector2(44.5, 25)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nx1u4"]
shader = ExtResource("4_qlj30")
shader_parameter/flash_amount = 0.0
shader_parameter/Noise = ExtResource("5_nx1u4")
shader_parameter/Dissolvevalue = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qlj30"]
atlas = ExtResource("4_ustrn")
region = Rect2(2560, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx1u4"]
atlas = ExtResource("4_ustrn")
region = Rect2(2048, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodir"]
atlas = ExtResource("4_ustrn")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_dldk2"]
atlas = ExtResource("4_ustrn")
region = Rect2(2560, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mep7c"]
atlas = ExtResource("4_ustrn")
region = Rect2(2048, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8cal"]
atlas = ExtResource("4_ustrn")
region = Rect2(1536, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cgvs"]
atlas = ExtResource("4_ustrn")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5g30"]
atlas = ExtResource("4_ustrn")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlv6n"]
atlas = ExtResource("4_ustrn")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc4r0"]
atlas = ExtResource("4_ustrn")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2k1e"]
atlas = ExtResource("4_ustrn")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_meomu"]
atlas = ExtResource("4_ustrn")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_m41o1"]
atlas = ExtResource("4_ustrn")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_deklv"]
atlas = ExtResource("4_ustrn")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_kl4t4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlj30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx1u4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodir")
}],
"loop": false,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dldk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mep7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8cal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cgvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5g30")
}],
"loop": false,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlv6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc4r0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2k1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meomu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m41o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deklv")
}],
"loop": false,
"name": &"Walk",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_ustrn"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimationPlayer/AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.1954,
"stream": ExtResource("7_3cgvs")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_uc6kd"]
resource_name = "attack"
length = 1.0000125
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.375, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.375, 0.45, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"hit"
}, {
"args": [],
"method": &"end_of_hit"
}, {
"args": [],
"method": &"start_walk"
}]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AnimationPlayer/AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_dldk2")
}, {
"end_offset": 0.0,
"start_offset": 1.5247,
"stream": ExtResource("9_r8cal")
}],
"times": PackedFloat32Array(0, 0.375)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_r8cal"]
resource_name = "hurt"
step = 0.125
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimationPlayer/AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_mep7c")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_nhlyx"]
resource_name = "walk"
length = 1.2500125
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 4, 3, 2, 1]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimationPlayer/AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_3cgvs")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1t0ji"]
_data = {
&"RESET": SubResource("Animation_ustrn"),
&"attack": SubResource("Animation_uc6kd"),
&"hurt": SubResource("Animation_r8cal"),
&"walk": SubResource("Animation_nhlyx")
}

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_e5g30"]

[node name="SPEAR" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(1.3, 1.3)
collision_layer = 0
script = ExtResource("1_qj3hu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2(1, 3.75)
shape = SubResource("RectangleShape2D_05wi8")

[node name="contacthitbox" parent="." instance=ExtResource("2_qw3lm")]
position = Vector2(-9, -20)
collision_layer = 0
script = ExtResource("3_sa1hk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="contacthitbox"]
position = Vector2(10, 23.5)
shape = SubResource("RectangleShape2D_qj3hu")

[node name="RayCastY" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
target_position = Vector2(0, 54)

[node name="attackhitbox" parent="." instance=ExtResource("2_qw3lm")]
collision_layer = 0
monitoring = false
monitorable = false
script = ExtResource("3_sa1hk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackhitbox"]
position = Vector2(-22.75, 6.75)
shape = SubResource("RectangleShape2D_4g3kk")

[node name="playerdetector" type="Area2D" parent="."]
position = Vector2(-37, 4)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdetector"]
light_mask = 3
position = Vector2(0.25, 2.5)
shape = SubResource("RectangleShape2D_ob1wc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_nx1u4")
position = Vector2(-1.9999999, 2.9999998)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_kl4t4")
animation = &"Walk"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
&"": SubResource("AnimationLibrary_1t0ji")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AnimationPlayer"]
stream = SubResource("AudioStreamPolyphonic_e5g30")
bus = &"sfx"

[node name="hitbox" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(-1, -1)
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
light_mask = 0
position = Vector2(1.75, 4.6875)
shape = SubResource("RectangleShape2D_05wi8")

[connection signal="body_entered" from="playerdetector" to="." method="_on_playerdetector_body_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
